mainwindows.xaml nueva version rev1

--- a/ANSv4/Catalogo4/_productos/SearchFilter.resx
+++ b/ANSv4/Catalogo4/_productos/SearchFilter.resx
@@ -124,77 +124,77 @@
   <data name="btnApply0.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEwAAABMCAYAAADHl1ErAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKmSURBVHhe7do9axRRFAbgRSQWgqYQJYhNfoKNiI2F2MRC
-        BHs78QdYbyFiE0QQi6hFLOwsbGxsVrAQLILi2qWREDaILLjf3+t77r5zjZvJ7swkhuXu+8Awu3M/4Bzm
-        nr0zSU5ERERERERERERERERkNuXz+WOdTudyv99f7fV6n/F5q16vt+xs33F9fTAY3MBxgkPmkyVqOBze
-        7na7mzhP1W63d5DAu4VC4TinmB+1Wm0JwX9kLlLBuG/NZnOZU4UPd8pFHCXGnwkSVsYSvcQpw4XadB61
-        aZtxe7jj6qhVL7A8VxqNxgWrV3ZG3yu4/qjVav1iVw/XflofTh0eqz1WxBmvh4S8qVarZ9ktFrotot/z
-        0Yi/MN/XYGsagrvDOD0kYZXNiaD/Qw71bF42h8PugvFfQwT/ms2pYNwrTuHYvMFtORDUNcbnWM2atgz3
-        Y+NsPKdybH42hwF3xTPG5th3NmWC8U85lXPQ+WYO6swGY4tcZVMmNn40zQjm/8SmMNgWgLE5qDmn2JSJ
-        bSc4lWN1jE1hYFweL2dmCedUDvZ3v9kUBsblHfYdZg/qbAoDlsx3xhZRDZvkCH4l19gUBtxhtxibo33Y
-        FLYTH/+lxF1xKDt91K8fwe30DerMfcboIXg9S8YpFosLCPYtY/wHruttxW6TkhXh+7A11KIVLK9zlgQ7
-        833Yg7l5H5YkWVnYG1ck90Bbk5nzv5KFZRjeO/0kyULgH3Dci1tucYL9q1HSZJVKpZNRfyyv6xjzBNe/
-        WD3DMWCCNnB9He03o/5BSZusuaZkpaBkpYRkPWZeYilZu9hznP3zCHOzh5I1xh5rmJs9lKx9YEm+Z448
-        JWsC7JuWkLR3tn+yZOHzSyUrgXK5fLpSqZzhVxERERERERERERERkSOQy/0BnZ2MjDSaSJcAAAAASUVO
-        RK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKnSURBVHhe7dq9axRBGAbwQyQWglqIImLjn2AjksZCbGIh
+        gr1d8A+wvkLEJogQUkQtYmFnYWNjc4KFYBEiXjobETkROfC+v8/nnXt2jJfN3e7mg2Pu+cGydzszL7wv
+        O3Ozm+REREREREREREREREREZlM+nz/W6XSu9fv9lV6v9wmfv9dqtZad7TuubwwGg1s4TnDIfLJCDYfD
+        u91u9yvOU7Xb7Z8o4HKhUDjOEPMDd9AFJP+BtUgF4740m83LDBU+3ClXcJSYfyYoWBlT9CpDhqter1/E
+        2vSDeXvVarWOteo5pudSo9G4ZOuVndF3Edcft1qt3+zq4dov68PQ4bG1xxZx5uuhIK9RsHPsFgvdzqDf
+        s9GIfxDvc7BrGpK7xzw9FGGFzYmg/yMO9Swum8Nhd8H4ryGSf8XmVDDuJUM4Fje4LQeSusH8HFuzpk3D
+        vdg4G89QjsVncxhwV6wxN8e+sykTjF9lKGe/8WYO1plN5ha5zqZMbPwozAjif2RTGGwLwNwcrDmn2JSJ
+        bScYyrF1jE1hYF4eL2dmBWcoB/u7P2wKA/PyDvoOswd1NoUBU2abuUW0hk1yBL+S62wKA+6wO8zN0T5s
+        CtuJj/9S4q44kJ0+1q9vwe30DdaZB8zRQ/J6loxTLBYXkOwb5vgfXNfbip0mFStiaxL6rGMtWsL0Om9F
+        sDPfhz2cm/dhSYqVhb1xRXH3tTWZOYdVLEzD8N7pJykWEn+P437cdIsT7F+NkharVCqdjPpjet3EmKe4
+        vmXrGY4BC7SJ6xtovx31D0raYs01FSsFFSslFOsJ6xJLxdrBnuPsn0dYm11UrDH2WMPa7KJi7QFT8h1r
+        5KlYE9h/46Bob23/ZMXC5xcqVgLlcvl0pVI5y68iIiIiIiIiIiIiIiJHIJf7C+zSjGtF3CppAAAAAElF
+        TkSuQmCC
 </value>
   </data>
   <data name="btnApply.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEwAAABMCAYAAADHl1ErAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKmSURBVHhe7dq9axRBGAbwQ0QLQVOIImLjn2AjwcZCbGIh
-        gr2d+AdYXyFiE0JALKIWsbCzsLGxOcFCsAiKZ2cjIiciB97n3rfPO/fsGC+bu91NDMfc84Nl73ZmXnhf
-        duZmNymIiIiIiIiIiIiIiIiIzKdisXio2+0uDwaD1X6//x6fv9Xr9cjO9h3XN4fD4TUcRzlkMVmhRqPR
-        zV6v9wXnmTqdzg8U8HapVDrMEIuj0WicQfJvWYtMMO5Tu90+z1Dhw51yAUeF+eeCglUxRS8yZLiazeZZ
-        rE3fmbdXq9WaWKueYHqutFqtc7Ze2Rl9L+H6gyiKfrGrh2s/rQ9Dh8fWHlvEma+HgrzAIn+K3RKh2xL6
-        PR6P+AvxPga7piG5W8zTQxFW2ZwK+t/nUM/isjkcdhdM/hoi+edszgTjnjGEY3GD23IgqSvMz7E1a9Y0
-        3I2Ns/EM5Vh8NocBd8Uj5ubYdzblgvEPGcrZa7y5g3Vmi7nFLrMpFxs/DjOG+O/YFAbbAjA3B2vOcTbl
-        YtsJhnJsHWNTGJiXx8u5WcEZysH+7jebwsC8vP2+w+xBnU1hwJT5zNxiWsOmOYBfyQ02hQF32A3m5mgf
-        NoPtxCd/KXFX7MtOH+vX1+B2+gbrzF3m6CF5PUsmKZfLR5DsS+b4D1zX24rtphUrxvdhG1iLVjC9TlsR
-        7Mz3YfcW5n1YmmLlYW9cUdw9bU3mzv8qFqZheO/00xQLib/BcSdpuiUJ9q9GaYtVqVSOxf0xva5izDqu
-        f7D1DMeQBdrC9U20X4/7ByVrsRaaipWBipURirXGuiRSsbax5zjs1CPWZgcVa4I91rA2O6hYu8CUfM0a
-        eSrWFPbfOCjaK9s/WbHw+amKlUK1Wj2Bop3kVxERERERERERERERkQNQKPwBPBaMSkFGAyQAAAAASUVO
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKmSURBVHhe7do9ixNRFAbgIKKFoBaiiNj4E2xEbCzEZi1E
+        sLcTf4B1ChGbRQSxWLVYCzsLGxubCBaCxaIYu21EJCISyPfk2/fcvHNds7PJzOy6hJv3gZDN3HsPnMPc
+        k5vRgoiIiIiIiIiIiIiIiMhiKhaLB3q93sXhcLg6GAw+4u/v9Xo9snf7jOvro9HoGl6HuWQ5WaHG4/HN
+        fr+/ife5ut3uTxTwdqlUOsgQy6PZbJ5G8u9Zi0yw7kun0znHUOHDnXIerwrzzwUFq2KLXmDIcLVarTPo
+        TT+Yt4ee1UKveobtudJut89av7J3zL2E6w+iKPrNqR6u/bI5DB0e6z3WxJmvh4K8ajQaJzktEaYdx7yn
+        kxV/Id7nYHsakrvFPD0UYZXDqWD+fS71LC6Hw2F3wfS3IZJ/yeFMsO4FQzgWN7gjB5K6wvwc61nztuFO
+        bJ2tZyjH4nM4DLgrnjA3xz5zKBesf8xQzm7jLRz0mQ3mFrvMoVxs/STMBOJ/4FAY7AjA3Bz0nKMcysWO
+        EwzlWB/jUBiYl8fLuVnBGcrB+a7GoTAwL2+v7zD7oc6hMGDLfGVuMfWwWfbhW3KNQ2HAHXaDuTk6h81h
+        J/Hpb0rcFXty0kf/+hbcSd+gz9xljh6S12/JJOVy+RCSfc0c/4Hrelqx1axixfg8bA29aAXb65QVwd75
+        POze0jwPS1OsPOyJK4q7q6PJwvlfxcI2DO+ZfppiIfF3eN1J2m5Jgv1Xo7TFqlQqR+L52F5XseYRrn+y
+        flar1UYs0Aaur2P8ejw/KFmLtdRUrAxUrIxQrIesSyIVawv7HYdGHbE226hYU+xnDWuzjYq1A2zJt6yR
+        p2LNYP8bB0V7Y+cnKxb+fq5ipVCtVo+hn53gRxERERERERERERERkX1QKPwBbe+MPp406rcAAAAASUVO
         RK5CYII=
 </value>
   </data>
   <data name="btnClearFilters.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEwAAABMCAYAAADHl1ErAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALDSURBVHhe7dk/aBNhGAbwIOIiiogOIqKICCI4CFVcSjcX
-        dVEHQVxFBXFxENQ4i6uriIurDuIiROxSHAQhXRxcHALGIebP5X/i87bPlfuud8n1WuUuPj8I5K7v96X3
-        8H65r9eCiIiIiIiIiIiIiIiIr1ar7eVbmWY4HD4dj8dXeSiTMCyjwKYJhGUSBVYul3d0Op0TvV7v7Gg0
-        mut2uyc9zzvMH8+uUFgmMrBSqbQdwVxA/fPBYPC1Xq/3WO9otVq/UfMOtbdRs4/DZwMu/BqvM8gJDMd7
-        cPGP0UGV1R8n12g0OhZwu90+yunyzbqA1xa0ElixWNyGQG9h2f3i+dQQnIe57tmcKx+cV3GB2dYCnfGe
-        x1vGlmqul2lUYOiEm3h94eGW6/f737BEj/BXyJeowNABLb6NZd9n6JZXGP8QrxsI4QpCvoNzz/B+mWWx
-        LLRcbpBjlmQsBPIBY+btjskpImGrccaWH4dFQsCfps2TOUkDQ0d8x+sihyVm4U66uyK0ByzNhySB2fLB
-        3uogh2xYs9k8gGCWOJ3D9nK4Cx9nafYlDGwZF/wx7oWl94TTxcLn7Mcy/cEpHRj/kmXZl3RJxrHAKpXK
-        Tk43ET7rFDpqwKFreC4fd83NBLaRsHzWTRzuwFyPWJJtaQNLE5bB/usYp3DYsmdJtqUJLG1YPoxf5FQO
-        /C67WSJBCOwuM3IgsNMskSAEc4kZOew8SyQI2SysRrSOnvRGQSedY0AOnL/OEglCMOeZUZg6LIp1EgNy
-        WOexRIKweX3NjBye5x1iifhs/xb1vA1/gP9kiQRhD3afGTly9Qf4v1KtVndZJzGjsAWWibH/FqGL3jAc
-        B7ruM8vEhzvgZeazTponuTOPHfaCGa3BubcskbBwaPZ9tplH3/8FPzR7lo9lOs/TMomFhrDmeCgiIiIi
-        IiIiIiIiIiLyVxUKfwCNE/WG+7yCpwAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALDSURBVHhe7dk/aBNhGAbwIOIiiogOImIREURwEKq4lG4u
+        6qIOgriKCuLiIKhxFldXERdXHcSlELGLOAhCuji4OASMQxKSy//E522fK/dd75LrtcpdfH4QyF3f70vv
+        4f1yX68FERERERERERERERERX61W28+3Ms1wOHw2Ho+v8VAmYVhGgU0TCMskCqxcLu/qdDone73eudFo
+        NN/tdk95nneUP55dobBMZGClUmkngrmI+heDweBbvV7vsd7RarXqqHmP2juNRuMAh88GXPh1XmeQExiO
+        9+Hin6CDKms/Tg6BdSzgdrt9jNPlm3UBry1oNbBisbgDgd7GsvvN86khOA9z3bc5Vz84r+ICs60FOuMD
+        j7eNLdVcL9OowNAJt/D6ysNt1+/3v2OJzvFXyJeowNABLb6NZd9n6JbXGP8Ir5sI4SpCvotzz/F+hWWx
+        LLRcbpBjlmQsBLKEMQt2x+QUkbDVOGvLj8MiIeBP0+bJnKSBoSN+4HWJwxKzcCfdXRHaQ5bmQ5LAbPlg
+        b3WYQzat2WweQjCfOZ3D9nK4C59gafYlDGwFF/wx7oWl95TTxcLnHMQy/ckpHRj/imXZl3RJxrHAKpXK
+        bk43ET7rNDpqwKHreC4fd82tBLaZsHzWTRzuwFyPWZJtaQNLE5bB/us4p3DYsmdJtqUJLG1YPoxf5lQO
+        /C57WSJBCOweM3IgsDMskSAEc5kZOew8SyQI2SyuRbSBnvRGQSedZ0AOnL/BEglCMBeYUZg6LIp1EgNy
+        WOexRIKweX3DjBye5x1hifhs/xb1vA1/gP9iiQRhD/aAGTly9Qf4v1KtVvdYJzGjsEWWibH/FqGL3jIc
+        B7ruC8vEhzvgFeazQZonuTOPHfaSGa3DuXcskbBwaPZ9tpVH3/8FPzR7lo9lusDTMomFhrDmeSgiIiIi
+        IiIiIiIiIiLyVxUKfwBaPvVxTQMMpwAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="btnRefresh.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEwAAABMCAYAAADHl1ErAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAPXSURBVHhe7ZpLaBNRFIaLiKWI2IVYRBQRqUgpSBeKC4u4
-        rQsXllLciCBSuy4iFSOKKGlXQnfiQnAjLtwUUYrtpghureBKVxKwEjGvJmma+J/0T8gkdzqPRJgbzweH
-        zEzOPXPPP3PPnVePoiiKoiiKoiiKoiiKoihK11Mul08mEom9XFW8qFQq46VSaUVF84kIBqv8N6JhSPXm
-        8/lT+L2EpK/BrsMmNjc3L6ZSqQN0c6UmmNC1omUymUMQ6C4S/JROp/PM1wiE+7K1tRUXUdncAVzqggld
-        JZoUaCT/EmdOifkFAm0Xi8XieYargs0OwQSINsW/7QRC9SHZea+zyS+I9aI2XLHaIhj2d6u6YxvJZrOH
-        ccQ/M5eOgaH6rVAoDGOxewRDQiOwBPPoOBsbG0mcbY+5WsdKwVCkB2G/mIMRDKsiEl7CGTiLM2YM9eks
-        kh3F8hVsm8Z/rzFBpOnuG+sEW19f34ekv7L/LaCW5SDGHH4PsokrSL4PNoOh/YfNPbFOMIixwL63IJcJ
-        Unvo6huIMIC4HxhmR6wSDMPqDPvdQrvXSNJWYjCcK1YJhrNgkf12gERX/YgFvxnUvp9uJoWeIV2xRjAM
-        tSH22QGKexaJHqebJxA9zqahsEYwJPqQfXaA7XN08U07olkjmBR09rkOb4OO0SUQYUWzQjB0spf9dSBF
-        mi6hgGiP5EAEMexzks2jCwQ7R40cIOH7dFEaQVE/gSM73WxBir2iKFYjw91UBnK53BG6KI3IhMK5xQEm
-        oBG6RBcc2UnTFL+TIeGFWCy2iyECg/ZL1KiOPNWVSxy6RBe5WGSfA4Gkn4cRTV6kmN4NyIGgS7QJK5gQ
-        RjS0ecDmDrA9Tpdo045gQhDR4H5Ubui3WzqRx+J0izZ+BMOs9tv0yKZmcHnCcK6sra3tgbjvtyM6wfa3
-        dIs+fgTDxNDWA0SK9YbhWpCHl3SNPn6HJET7GOZ2Sa6t0HaVYVqAkM/oagdBaphM/Ugw7uclCNz7Efse
-        RHZ90oqZ8Tt++tnEDkyCoTCXuWhELgtkmMJuI+nLfI85hOUxxLsBl1deb4v4Gu40u2EPJsEgxCzqyg+u
-        dhw566yZFZtxGZLjvN/7J58KYGYd5O7tw00w+U9mRtSsp15D1A8SQwp8MpncX92xreAskprTTFWwGhg+
-        w0i2nc+d3snnBAxnNy7XSA7Bash9IAS+A1uRGZO+RmQGRNx5DD/jB3VWYxDNKFgjy8vLu2VmhHgTsJuw
-        KdhVCHUBw3yAbt1Lk2iegimgQTQVzC8iGgQL9QJXURRFURRFURRFURRFURTFInp6/gLew1vf3DoAZgAA
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAPXSURBVHhe7ZpLaBNRFIaLiKWI2IVYRBQRqUgpSBeKC0Xc
+        1oULSyluRBCpXReRihVFlLQroTtxIbgRF26KKMV0UwS3VnClKwlYiaRp3mnif9I/IZPc6TxSYW48Hxwy
+        Mzn3zD3/zD13Xj2KoiiKoiiKoiiKoiiKoihdT6VSOZlIJPZyVfGiWq2OlcvlZRXNJyIYrPrfiIYh1ZvP
+        50/h9zKSvg67ARsvlUqX1tfXD9DNlbpgQteKtrGxcQgC3UOCnyFKnvkagXBfNzc3YyIqmzuAS0MwoatE
+        kwKN5F+lUqky8wsE2i4Wi8XzDFcDmx2CCRBtkn/bCYTqQ7LzXmeTXxDrZX24YrVNMOzvdm3HNpLJZA7j
+        iH9hLjsGhur3QqEwjMXuEQwJjcASzGPHyeVySZxtT7jawErBUKQHYb+ZgxHUsiISXsIZOIMzZhT16SyS
+        vYDlq9g2hf/eYIJI09031gm2tra2D0l/Y//bQP3JQoy5dDp9kE1cQfJ9sGkM7RSbe2KdYBBjgX1vQy4T
+        pPbQ1TcQYQBxPzLMtlglGIbVGfa7jU6vkaStxGA4V6wSDGfBIvvtAImu+BELftOofb/cTAo9Q7pijWAY
+        akPsswPUrAwSPU43TyB6jE1DYY1gSPQR++wA2+fo4ptORLNGMCno7HMD3gYdo0sgwopmhWDoZC/760CK
+        NF1CAdEey4EIYtjnBJtHFwh2jho5QMIP6KI0g6J+Akd2qtWCFHtFUaxGhrupDGSz2SN0UZqRCYVziwNM
+        QCN0iS44shOmKX47Q8ILs7OzuxgiMGi/RI0ayFNducShS3SRi0X2ORBI+kUY0eRFiundgBwIukSbsIIJ
+        YURDm4ds7gDbY3SJNp0IJgQRDe5H5YZ+q6UTeSxOt2jjRzDMan9Mj2zqBpenDOfK6urqHoj7YSuiE2x/
+        R7fo40cwTAwdPUCkWG8Zrg15eEnX6ON3SEK0T2Ful+TaCm1XGKYNCPmcrnYQpIbJ1I8EY35egsC9H7Hv
+        Q2TXJ62YGX/gp59N7MAkGKb9CheNyGWBDFPYHSR9he8xh7A8ing34fLa620RX8OdZjfswSQYhJhBXfnJ
+        1R1HzjprZsVWXIbkGO/3/smnAphZB7l7+3ATTP6TmRE165nXEPWDxJACn0wm99d2bCs4i6TmtFITrA6G
+        zzCS7eRzp/fyOQHD2Y3LNZJDsDpyHwiB78KWZcakrxGZARF3HsPP+EGd1RhEMwrWTDwe3y0zI8Qbh92C
+        TcKuQaiLGOYDdOteWkTzFEwBTaKpYH4R0SBYqBe4iqIoiqIoiqIoiqIoiqIoFtHT8xdQOFuyJKf/MQAA
         AABJRU5ErkJggg==
 </value>
   </data>
