--- a/ANSv4/Catalogo4/_pedidos/ucPedido.resx
+++ b/ANSv4/Catalogo4/_pedidos/ucPedido.resx
@@ -120,4 +120,17 @@
   <metadata name="statusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>122, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="ucPnlTop.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAfkAAABaCAIAAAA0K7hHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsIAAA7CARUoSoAAAAFOSURBVHhe7dRBDQAwCACxCeGJf2d4mI9Lk2rou1kA2lwP
+        0Od6gD7XA/S5HqDP9QB9rgfocz1An+sB+lwP0Od6gD7XA/S5HqDP9QB9rgfocz1An+sB+lwP0Od6gD7X
+        A/S5HqDP9QB9rgfocz1An+sB+lwP0Od6gD7XA/S5HqDP9QB9rgfocz1An+sB+lwP0Od6gD7XA/S5HqDP
+        9QB9rgfocz1An+sB+lwP0Od6gD7XA/S5HqDP9QB9rgfocz1An+sB+lwP0Od6gD7XA/S5HqDP9QB9rgfo
+        cz1An+sB+lwP0Od6gD7XA/S5HqDP9QB9rgfocz1An+sB+lwP0Od6gD7XA/S5HqDP9QB9rgfocz1An+sB
+        +lwP0Od6gD7XA/S5HqDP9QB9rgfocz1An+sB+lwP0Od6gD7XA/S5HqDP9QB9rgfocz1An+sB+lwPUDf7
+        Aesqy3N3RoW5AAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
