ajuste de tamaños 2

--- a/ANSv4/Catalogo4/_productos/SearchFilter.resx
+++ b/ANSv4/Catalogo4/_productos/SearchFilter.resx
@@ -124,28 +124,28 @@
   <data name="btnApply0.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEwAAABMCAYAAADHl1ErAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKnSURBVHhe7dq9ixNBGAbwIKKFoBaiiNj4J9iI2FiIzVmI
-        YG8n/gHWKURsDhHE4tTiLOwsbGxsIlgIFodi7K4RkYhIyPf3h887eXY8c3vJ7t55hMnzg7DJzswL78vO
-        ZHaTnIiIiIiIiIiIiIiIiMhiyufzB3q93sXhcLg6GAw+4v33arXasaN9xvn10Wh0Da/DHLKcrFDj8fhm
-        v9/fxHGubrf7EwW8XSgUDjLE8mg0GqeR/HvWIhWM+9Jut88xVPhwpZzHq8T8M0HBypiiFxgyXM1m8wzW
-        ph/M26vVak2sVc8wPVdardZZW6/siL6XcP5Bp9P5za4ezv2yPgwdHlt7bBFnvh4K8qper59kt1jodhz9
-        nk5G/IV4n4Nd05DcLebpoQirbE4E/e9zqGdx2RwOuwqmvw2R/Es2p4JxLxjCsbjBbTmQ1BXm59iaNW8a
-        7sTG2XiGciw+m8OAq+IJc3PsM5sywfjHDOXsNt7CwTqzwdwil9mUiY2fhJlA/A9sCoNtAZibgzXnKJsy
-        se0EQzm2jrEpDMzL4+nMrOAM5WB/V2VTGJiXt9dXmN2osykMmDJfmVtEa9gs+/AtucamMOAKu8HcHO3D
-        5rCd+PQ3Ja6KPdnpY/36FtxO32CducscPSSve8k4xWLxEJJ9zRz/gfN6WrHVrGJF+DxsDWvRCqbXKSuC
-        Hfk87N7SPA9LUqws7IkrirurrcnC+V/FwjQM75l+kmIh8Xd43YmbbnGC/dUoabFKpdKRqD+m11WMeYTz
-        n2w9q1QqIxZoA+fX0X496h+UtMVaaipWCipWSijWQ9Ylloq1hd3H2Z9HWJttVKwpdlvD2myjYu0AU/It
-        a+SpWDPYv3FQtDe2f7Ji4f1zFSuBcrl8DBvPE/woIiIiIiIiIiIiIiKyD3K5P5/IjDJ41LkrAAAAAElF
-        TkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKoSURBVHhe7dq9ixNBGAbwIKKFoBaiiNj4J9iI2FiIzVmI
+        YG8n/gHWKURsDhHE4tTiLOwsbGxsIlgIFodi7GxEJCKSxHx/x+edPDueub1kd+88wuT5QdhkZ+aF92Vn
+        MrtJTkRERERERERERERERGQx5fP5fb1e7/xwOFwdDAbv8f5btVrt2NE+4/z6aDS6gtdBDllOVqjxeHy9
+        3+9/wXGubrf7AwW8WSgU9jPE8mg0GieR/FvWIhWM+9Rut88wVPhwpZzFq8T8M0HBypii5xgyXM1m8xTW
+        pu/M26vVak2sVU8wPVdardZpW6/siL4XcP5ep9P5xa4ezv20PgwdHlt7bBFnvh4K8qJerx9nt1jodhT9
+        Hk9G/IV4H4Nd05DcDebpoQirbE4E/e9yqGdx2RwOuwqmvw2R/HM2p4JxzxjCsbjBbTmQ1CXm59iaNW8a
+        bsfG2XiGciw+m8OAq+IRc3PsM5sywfiHDOXsNN7CwTqzwdwiF9mUiY2fhJlA/HdsCoNtAZibgzXnMJsy
+        se0EQzm2jrEpDMzL4+nMrOAM5WB/95tNYWBe3m5fYXajzqYwYMp8Zm4RrWGz7MG35BqbwoAr7Bpzc7QP
+        m8N24tPflLgqdmWnj/Xra3A7fYN15jZz9JC87iXjFIvFA0j2JXP8B87racVms4oV4fOwNaxFK5heJ6wI
+        duTzsDtL8zwsSbGysCeuKO6OtiYL538VC9MwvGf6SYqFxN/gdStuusUJ9lejpMUqlUqHov6YXpcx5gHO
+        f7D1rFKpjFigDZxfR/vVqH9Q0hZrqalYKahYKaFY91mXWCrWJnYfZ38eYW22ULGm2G0Na7OFirUNTMnX
+        rJGnYs1g/8ZB0V7Z/smKhfdPVawEyuXyEWw8j/GjiIiIiIiIiIiIiIjIHsjl/gDRoYwmSLSFoAAAAABJ
+        RU5ErkJggg==
 </value>
   </data>
   <data name="btnApply.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEwAAABMCAYAAADHl1ErAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKnSURBVHhe7dq9ixNBGAbwIKKFoBaiiNj4J1xziI2F2JyF
-        CPZ24h9gnUIOm0MEsTi1OAs7CxsbmwgWgsWhGDsbEYmIJFy+v+PzTp4dz9xesrt3HmHy/CBssjPzwvuy
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKoSURBVHhe7dq9ixNBGAbwIKKFoBaiiNj4J1xziI2F2JyF
+        CPZ24h9gnUIOm0MEsTi1OAs7CxsbmwgWgsWhGDsbEYmICVy+v+PzTp4dz9xesrt3HmHy/CBssjPzwvuy
         M5ndJCciIiIiIiIiIiIiIiIyn/L5/KFut3txMBis9fv9D3j/vVKptO1on3F+YzgcXsPrKIcsJivUaDS6
-        2ev1vuI4U6fT+YkC3i4UCocZYnHU6/WzSP4da5EKxn1utVoXGCp8uFKW8Cox/0xQsDKm6DJDhqvRaJzD
+        2ev1vuI4U6fT+YkC3i4UCocZYnHU6/WzSP4da5EKxn1utVoXGCp8uFKW8Cox/0xQsAqm6DJDhqvRaJzD
         2vSDeXvVarWBteoppudKs9k8b+uVHdH3Es7fb7fbv9nVw7lf1oehw2Nrjy3izNdDQV7WarXT7BYL3U6i
         35PxiL8Q71OwaxqSu8U8PRRhjc2JoP8qh3oWl83hsKtg8tsQyb9gcyoY95whHIsb3JYDSV1hfo6tWbOm
         4W5snI1nKMfiszkMuCoeMzfHPrMpE4x/xFDOXuPNHawzm8wtcplNmdj4cZgxxH/PpjDYFoC5OVhzjrMp
@@ -153,15 +153,15 @@
         2Ay2E5/8psRVsS87faxf34Lb6RusM3eZo4fkdS8Zp1gsHkGyr5jjP3BeTyu2m1asCJ+HrWMtWsH0OmNF
         sCOfh91bmOdhSYqVhT1xRXH3tDWZO/+rWJiG4T3TT1IsJP4Wrztx0y1OsL8aJS1WqVQ6FvXH9LqKMQ9x
         /qOtZ+VyecgCbeL8BtqvR/2DkrZYC03FSkHFSgnFesC6xFKxtrH7OPvzCGuzg4o1wW5rWJsdVKxdYEq+
-        YY08FWsK+zcOivba9k9WLLx/pmIlgIKdwMbzFD+KiIiIiIiIiIiIiIgcgFzuDwOJjBoDCP1xAAAAAElF
-        TkSuQmCC
+        YY08FWsK+zcOivba9k9WLLx/pmIlgLXsBDaep/hRRERERERERERERETkAORyfwA1YowObmFlyQAAAABJ
+        RU5ErkJggg==
 </value>
   </data>
   <data name="btnClearFilters.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEwAAABMCAYAAADHl1ErAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALFSURBVHhe7dk/aBNhGAbwIOIiiogOIqKICCI4CFVcSjcX
-        dVEHQVxFBXFxENQ4i6uriIurDuIiROxSHAQhXRxcHAJGkhiSy//E522fK/dd75LrtUouPj8I5K7v96X3
+        dVEHQVxFBXFxENQ4i6uriIurDuIiROxSHAQhXRxcHALGhBiSy//E522fK/dd75LrtUouPj8I5K7v96X3
         8H65r9eciIiIiIiIiIiIiIiIr1ar7eVbmWQwGDwdjUZXeSjjMCyjwCYJhGUSBVYsFne02+0T3W737HA4
         nOt0Oic9zzvMH8+uUFgmMrBCobAdwVxA/fN+v/+1Uql0We9oNpu/UfMOtbfr9fo+Dp8NuPBrvM4gJzAc
         78HFP0YHlVZ/nFy1Wm1bwK1W6yinyzbrAl5b0Epg+Xx+GwK9hWX3i+dTw53Xw1z3bM6VD86quMBsa4HO
@@ -172,7 +172,7 @@
         TuXA77KbJRKEwO4yIwcCO80SCUIwl5iRw86zRIKQzcJqROvoSW8UdNI5BuTA+esskSAEc54ZhanDolgn
         MSCHdR5LJAib19fMyOF53iGWiM/2b1HP2/AH+E+WSBD2YPeZkSNTf4D/K+VyeZd1EjMKW2CZGPtvEbro
         DcNxoOs+s0x8uANeZj7rpHmSO/PYYS+Y0Rqce8sSCQuHZt9nm3n0/V/wQ7Nn+Vim8zwt41hoCGuOhyIi
-        IiIiIiIiIiIiIiJ/VS73B3JH9TWNRg8BAAAAAElFTkSuQmCC
+        IiIiIiIiIiIiIiJ/VS73B+/69SMK+8OZAAAAAElFTkSuQmCC
 </value>
   </data>
 </root>
