novedades y otros rev1

--- a/ANSv4/Catalogo4/_productos/SearchFilter.resx
+++ b/ANSv4/Catalogo4/_productos/SearchFilter.resx
@@ -124,28 +124,10 @@
   <data name="btnApply0.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEwAAABMCAYAAADHl1ErAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKoSURBVHhe7dq9ixNBGAbwIKKFoBaiiNj4J9iI2FiIzVmI
-        YG8n/gHWKURsDhHE4tTiLOwsbGxsIlgIFodi7GxEJCKSxHx/x+edPDueub1kd+88wuT5QdhkZ+aF92Vn
-        MrtJTkRERERERERERERERGQx5fP5fb1e7/xwOFwdDAbv8f5btVrt2NE+4/z6aDS6gtdBDllOVqjxeHy9
-        3+9/wXGubrf7AwW8WSgU9jPE8mg0GieR/FvWIhWM+9Rut88wVPhwpZzFq8T8M0HBypii5xgyXM1m8xTW
-        pu/M26vVak2sVU8wPVdardZpW6/siL4XcP5ep9P5xa4ezv20PgwdHlt7bBFnvh4K8qJerx9nt1jodhT9
-        Hk9G/IV4H4Nd05DcDebpoQirbE4E/e9yqGdx2RwOuwqmvw2R/HM2p4JxzxjCsbjBbTmQ1CXm59iaNW8a
-        bsfG2XiGciw+m8OAq+IRc3PsM5sywfiHDOXsNN7CwTqzwdwiF9mUiY2fhJlA/HdsCoNtAZibgzXnMJsy
-        se0EQzm2jrEpDMzL4+nMrOAM5WB/95tNYWBe3m5fYXajzqYwYMp8Zm4RrWGz7MG35BqbwoAr7Bpzc7QP
-        m8N24tPflLgqdmWnj/Xra3A7fYN15jZz9JC87iXjFIvFA0j2JXP8B87racVms4oV4fOwNaxFK5heJ6wI
-        duTzsDtL8zwsSbGysCeuKO6OtiYL538VC9MwvGf6SYqFxN/gdStuusUJ9lejpMUqlUqHov6YXpcx5gHO
-        f7D1rFKpjFigDZxfR/vVqH9Q0hZrqalYKahYKaFY91mXWCrWJnYfZ38eYW22ULGm2G0Na7OFirUNTMnX
-        rJGnYs1g/8ZB0V7Z/smKhfdPVawEyuXyEWw8j/GjiIiIiIiIiIiIiIjIHsjl/gDRoYwmSLSFoAAAAABJ
-        RU5ErkJggg==
-</value>
-  </data>
-  <data name="btnApply.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAAEwAAABMCAYAAADHl1ErAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKoSURBVHhe7dq9ixNBGAbwIKKFoBaiiNj4J1xziI2F2JyF
-        CPZ24h9gnUIOm0MEsTi1OAs7CxsbmwgWgsWhGDsbEYmICVy+v+PzTp4dz9xesrt3HmHy/CBssjPzwvuy
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKnSURBVHhe7dq9ixNBGAbwIKKFoBaiiNj4J1xziI2F2JyF
+        CPZ24h9gnUIOm0MEsTi1OAs7CxsbmwgWgsWhGDsbEYmIJFy+v+PzTp4dz9xesrt3HmHy/CBssjPzwvuy
         M5ndJCciIiIiIiIiIiIiIiIyn/L5/KFut3txMBis9fv9D3j/vVKptO1on3F+YzgcXsPrKIcsJivUaDS6
-        2ev1vuI4U6fT+YkC3i4UCocZYnHU6/WzSP4da5EKxn1utVoXGCp8uFKW8Cox/0xQsAqm6DJDhqvRaJzD
+        2ev1vuI4U6fT+YkC3i4UCocZYnHU6/WzSP4da5EKxn1utVoXGCp8uFKW8Cox/0xQsDKm6DJDhqvRaJzD
         2vSDeXvVarWBteoppudKs9k8b+uVHdH3Es7fb7fbv9nVw7lf1oehw2Nrjy3izNdDQV7WarXT7BYL3U6i
         35PxiL8Q71OwaxqSu8U8PRRhjc2JoP8qh3oWl83hsKtg8tsQyb9gcyoY95whHIsb3JYDSV1hfo6tWbOm
         4W5snI1nKMfiszkMuCoeMzfHPrMpE4x/xFDOXuPNHawzm8wtcplNmdj4cZgxxH/PpjDYFoC5OVhzjrMp
@@ -153,26 +135,44 @@
         2Ay2E5/8psRVsS87faxf34Lb6RusM3eZo4fkdS8Zp1gsHkGyr5jjP3BeTyu2m1asCJ+HrWMtWsH0OmNF
         sCOfh91bmOdhSYqVhT1xRXH3tDWZO/+rWJiG4T3TT1IsJP4Wrztx0y1OsL8aJS1WqVQ6FvXH9LqKMQ9x
         /qOtZ+VyecgCbeL8BtqvR/2DkrZYC03FSkHFSgnFesC6xFKxtrH7OPvzCGuzg4o1wW5rWJsdVKxdYEq+
-        YY08FWsK+zcOivba9k9WLLx/pmIlgLXsBDaep/hRRERERERERERERETkAORyfwA1YowObmFlyQAAAABJ
+        YY08FWsK+zcOivba9k9WLLx/pmIlgIKdwMbzFD+KiIiIiIiIiIiIiIgcgFzuDwOJjBoDCP1xAAAAAElF
+        TkSuQmCC
+</value>
+  </data>
+  <data name="btnApply.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEwAAABMCAYAAADHl1ErAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKoSURBVHhe7dq9ixNBGAbwIKKFoBaiiNj4J9iI2FiIzVmI
+        YG8n/gHWKURsDhHE4tTiLOwsbGxsIlgIFodi7K4RkYgkAfP9HZ938ux45vaS3b3zCJPnB2GTnZkX3ped
+        yewmOREREREREREREREREZHFlM/nD/R6vYvD4XB1MBh8xPvvlUqlY0f7jPPro9HoGl6HOWQ5WaHG4/HN
+        fr+/ieNc3W73Jwp4u1AoHGSI5dFoNE4j+fesRSoY96Xdbp9jqPDhSjmPV4n5Z4KCVTFFLzBkuJrN5hms
+        TT+Yt1er1ZpYq55heq60Wq2ztl7ZEX0v4fyDTqdTZlcP535ZH4YOj609togzXw8FeVWv10+yWyx0O45+
+        Tycj/kK8z8GuaUjuFvP0UIRVNieC/vc51LO4bA6HXQXT34ZI/iWbU8G4FwzhWNzgthxI6grzc2zNmjcN
+        d2LjbDxDORafzWHAVfGEuTn2mU2ZYPxjhnJ2G2/hYJ3ZYG6Ry2zKxMZPwkwg/gc2hcG2AMzNwZpzlE2Z
+        2HaCoRxbx9gUBubl8XRmVnCGcrC/+82mMDAvb6+vMLtRZ1MYMGW+MreI1rBZ9uFbco1NYcAVdoO5OdqH
+        zWE78elvSlwVe7LTx/r1LbidvsE6c5c5ekhe95JxisXiIST7mjn+A+f1tGKrWcWK8HnYGtaiFUyvU1YE
+        O/J52L2leR6WpFhZ2BNXFHdXW5OF87+KhWkY3jP9JMVC4u/wuhM33eIE+6tR0mKVSqUjUX9Mr6sY8wjn
+        P9l6Vi6XRyzQBs6vo/161D8oaYu11FSsFFSslFCsh6xLLBVrC7uPsz+PsDbbqFhT7LaGtdlGxdoBpuRb
+        1shTsWawf+OgaG9s/2TFwvvnKlYC1Wr1GDaeJ/hRRERERERERERERERkH+RyfwBnO4wCJwVXHAAAAABJ
         RU5ErkJggg==
 </value>
   </data>
   <data name="btnClearFilters.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEwAAABMCAYAAADHl1ErAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALFSURBVHhe7dk/aBNhGAbwIOIiiogOIqKICCI4CFVcSjcX
-        dVEHQVxFBXFxENQ4i6uriIurDuIiROxSHAQhXRxcHALGhBiSy//E522fK/dd75LrtUouPj8I5K7v96X3
-        8H65r9eciIiIiIiIiIiIiIiIr1ar7eVbmWQwGDwdjUZXeSjjMCyjwCYJhGUSBVYsFne02+0T3W737HA4
-        nOt0Oic9zzvMH8+uUFgmMrBCobAdwVxA/fN+v/+1Uql0We9oNpu/UfMOtbfr9fo+Dp8NuPBrvM4gJzAc
-        78HFP0YHlVZ/nFy1Wm1bwK1W6yinyzbrAl5b0Epg+Xx+GwK9hWX3i+dTw53Xw1z3bM6VD86quMBsa4HO
-        eM/jLWNLNdPLNCowdMJNvL7wcMv1er1vWKJH+CtkS1Rg6IAm38ay7zN0yyuMf4jXDYRwBSHfwblneL/M
-        slgWWiY3yDFLMhYC+YAx83bH5BSRsNU4Y8uPwyIh4E+T5pk6SQNDR3zH6yKHJWbhjru7IrQHLM2GJIHZ
-        8sHe6iCHbFij0TiAYJY4ncP2crgLH2fp9EsY2DIu+GPcC0vvCaeLhc/Zj2X6g1M6MP4ly6Zf0iUZxwIr
-        lUo7Od1Y+KxT6Kg+h67huWzcNTcT2EbC8lk3cbgDcz1iyXRLG1iasAz2X8c4hcOWPUumW5rA0oblw/hF
-        TuXA77KbJRKEwO4yIwcCO80SCUIwl5iRw86zRIKQzcJqROvoSW8UdNI5BuTA+esskSAEc54ZhanDolgn
-        MSCHdR5LJAib19fMyOF53iGWiM/2b1HP2/AH+E+WSBD2YPeZkSNTf4D/K+VyeZd1EjMKW2CZGPtvEbro
-        DcNxoOs+s0x8uANeZj7rpHmSO/PYYS+Y0Rqce8sSCQuHZt9nm3n0/V/wQ7Nn+Vim8zwt41hoCGuOhyIi
-        IiIiIiIiIiIiIiJ/VS73B+/69SMK+8OZAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALFSURBVHhe7dk/aBNhGAbwIOIiiogOImIREURwEKq4lG4u
+        6qIOgriKCuLiIKhxFldXERdXHcSlELGLOAhCuji4OARMAjEkl/+Jz9s+V+5L75LrtcpdfH4QyF3f70vv
+        4f1yX685ERERERERERERERERX61W28+3Ms1gMHg2Go2u8VAmYVhGgU0TCMvECqxYLO5qt9snu93uueFw
+        ON/pdE55nneUP55dY2GZ0MAKhcJOBHMR9S/6/f63SqXSZb2j2Wz+Rs171N6p1+sHOHw24MKv8zqDnMBw
+        vA8X/wQdVFr7cXzVarVtAbdarWOcLtusC3htQauB5fP5HQj0NpZdhecTw53Xw1z3bc7VD86qqMBsa4HO
+        +MDjbWNLNdPLNCwwdMItvL7ycNv1er3vWKJz/BWyJSwwdECTbyPZ9xm65TXGP8LrJkK4ipDv4txzvF9h
+        WSQLLZMb5IglGQmBLGHMgt0xOUUobDXO2vLjsFAI+NO0eVInbmDoiB94XeKw2CzcSXdXhPaQpdkQJzBb
+        PthbHeaQTWs0GocQzGdO57C9HO7CJ1iafjEDW8EFf4x6Yek95XSR8DkHsUx/ckoHxr9iWfrFXZJRLLBS
+        qbSb002EzzqNjupz6Dqey8ZdcyuBbSYsn3UThzsw12OWpFvSwJKEZbD/Os4pHLbsWZJuSQJLGpYP45c5
+        lQO/y16WSBACu8eMHAjsDEskCMFcZkYOO88SCUI2i2sRbaAnvWHQSecZkAPnb7BEghDMBWY0Th0WxjqJ
+        ATms81giQdi8vmFGDs/zjrBEfLZ/C3vehj/Af7FEgrAHe8CMHJn6A/xfKZfLe6yTmNG4RZaJsf8WoYve
+        MhwHuu4Ly8SHO+AV5rNBkie5M48d9pIZrcO5dyyRceOh2ffZVh59/xf80OxZPpbpAk/LJBYawprnoYiI
+        iIiIiIiIiIiIiMhflcv9AW289RGup//IAAAAAElFTkSuQmCC
 </value>
   </data>
 </root>
